  * patches/kfreebsd/local-getaddrinfo-freebsd-kernel.diff: improve and remove
    a warning.
  * patches/any/cvs-rfc3542-advanced-api.diff: new patch from usptream to
    add missing Advanced API (RFC3542) (1) defines.  Closes: #753909.
  * debian/rules: don't put debug files from libc0.1-i386 and libc6-mips32
    into libc0.1-dbg or libc6-dbg.

 -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Oct 2015 07:05:23 +0200

glibc (2.21-0experimental2) experimental; urgency=medium

  [ Samuel Thibault ]
  * Symbol versions which contain _DEBIAN_ are unexpected by upstream scripts.
    Add hurd-i386-only patches/hurd-i386/local-versions-hack.diff to work
    around the issue.  Also take the opportunity of the upstream version bump
    to bump the versions to GLIBC_2_21, which will allow one to remove the
    _DEBIAN_ hacks once packages are rebuilt.
  * patches/hurd-i386/unsubmitted-libpthread-semaphore.h.diff: Remove
    libpthread/sysdeps/i386/bits/semaphore.h, now that hurd Implies
    libpthread/sysdeps/generic. Move libpthread/include/semaphore.h into
    libpthread/sysdeps/pthread/semaphore.h instead of the latter just
    including the former, since the latter is what gets installed.
  * patches/hurd-i386/cvs-cache-mach_host_self.diff: New patch to avoid port
    count issue on the host port.
  * patches/hurd-i386/unsubmitted-gnumach.defs.diff: Also build
    task_notify.defs stubs.  Drop unneeded change.
  * libc0.3.symbols.hurd-i386: Update.
  * patches/hurd-i386/local-mach_print.diff: New patch to export mach_print.

  [ Aurelien Jarno ]
  * rules.d/debhelper.mk: replace GLIBC_VERSION before LIBC.  Closes:
    #797538.
  * Drop loongson-2f flavour on mipsel as this machine is not supported
    anymore (default to R2 ISA).
  * kfreebsd/local-sysdeps.diff: update to revision 5772 (from glibc-bsd).
    Closes: #764692, #785796.
  * testsuite-checking/expected-results-mips*: allow the new tst-audit9
    fail, like the others tst-auditX.