@@ -23,9 +23,9 @@ WIP.  id:"87mxd9hl2n.fsf@kepler.schwinge.homeip.net"
 --- a/elf/rtld.c
 +++ b/elf/rtld.c
 @@ -164,7 +164,7 @@ struct rtld_global_ro _rtld_global_ro at
+     ._dl_hwcap_mask = HWCAP_IMPORTANT,
      ._dl_lazy = 1,
      ._dl_fpu_control = _FPU_DEFAULT,
-     ._dl_pointer_guard = 1,
 -    ._dl_pagesize = EXEC_PAGESIZE,
 +    ._dl_pagesize = /* EXEC_PAGESIZE */ 4096,
      ._dl_inhibit_cache = 0,
