@@ -26,6 +26,10 @@ glibc (2.21-0experimental3) UNRELEASED; urgency=medium
   * debian/rules: don't put debug files from libc0.1-i386 and libc6-mips32
     into libc0.1-dbg or libc6-dbg.
 
+  [ Samuel Thibault ]
+  * patches/hurd-i386/tg-pagesize.diff: Refresh.
+  * patches/hurd-i386/submitted-handle-eprototype.diff: Refresh.
+
  -- Aurelien Jarno <aurel32@debian.org>  Mon, 19 Oct 2015 07:05:23 +0200
 
 glibc (2.21-0experimental2) experimental; urgency=medium
